fix for overlapping text on column names in the narrow screen table view

--- a/server/app/assets/stylesheets/components/graphs/_table.scss
+++ b/server/app/assets/stylesheets/components/graphs/_table.scss
@@ -38,7 +38,6 @@ only screen and (max-width: 1199.98px),
 		//padding-top: 0.3rem;
 		//padding-bottom: 0.3rem;
 		margin-right: 16px;
-		white-space: nowrap;
 		text-align: right;
 		border-right: 1px solid #dee2e6;
 	}
